2007-05-03  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.13.1 ===

2007-04-30  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt: Add new regex functions

2007-04-30  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt: 
	* glib/tmpl/gregex.sgml: Update for the GRegex/GMatchInfo
	split.

2007-04-24  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt: Add g_option_context_get_help.

2007-04-11  Emmanuele Bassi  <ebassi@gnome.org>

	* glib/glib-sections.txt: Add new hash functions.

2007-04-02  Ryan Lortie  <desrt@desrt.ca>

	* gobject/tmpl/objects.sgml: Document ->constructed().

2007-03-18  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/thread_pools.sgml:
	* glib/tmpl/strings.sgml:
	* glib/tmpl/string_chunks.sgml:
	* glib/tmpl/spawn.sgml:
	* glib/tmpl/patterns.sgml:
	* glib/tmpl/modules.sgml:
	* glib/tmpl/memory_slices.sgml:
	* glib/tmpl/memory.sgml:
	* glib/tmpl/gregex.sgml: Trivial cleanups

2007-03-16  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.13.0 ===

Fri Mar 16 16:04:42 2007  Tim Janik  <timj@gtk.org>

	* glib/tmpl/scanner.sgml: some fixups, mention that changing scanner 
	config during the parsing phase is supported behavior.

2007-03-15  Marco Barisione <marco@barisione.org>

	Add GRegex for regular expression matching.  (#50075)

	* glib/Makefile.am:
	* glib/glib-docs.sgml:
	* glib/glib-sections.txt:
	* glib/tmpl/glib-unused.sgml:
	* glib/regex-syntax.sgml:
	* glib/tmpl/gregex-unused.sgml:
	* glib/tmpl/gregex.sgml: Add GRegex.

	* glib/building.sgml: Document build options for GRegex.

2007-03-14  Stefan Kost  <ensonic@users.sf.net>

	* gobject/tmpl/gparamspec.sgml:
	  Readd docs for G_PARAM_STATIC_NICK and add docs for new
	  G_PARAM_STATIC_STRINGS (fixes #418021).

2007-03-06  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/threads.sgml: Document G_ERRORCHECK_MUTEXES. (#412145)

	* glib/tmpl/trees-nary.sgml: Fix a typo in the docs for