@@ -2355,16 +2355,17 @@ g_unichar_validate
 g_unichar_isalnum
 g_unichar_isalpha
 g_unichar_iscntrl
+g_unichar_isdefined
 g_unichar_isdigit
 g_unichar_isgraph
 g_unichar_islower
+g_unichar_ismark
 g_unichar_isprint
 g_unichar_ispunct
 g_unichar_isspace
+g_unichar_istitle
 g_unichar_isupper
 g_unichar_isxdigit
-g_unichar_istitle
-g_unichar_isdefined
 g_unichar_iswide
 g_unichar_iswide_cjk
 g_unichar_iszerowidth
